--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,40 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext {
+        compile_sdk_version = 29
+        build_tools_version = "29.0.2"
+        min_sdk_version = 19
+        target_sdk_version = 29
+        code_version = 1
+        name_version = "1.0"
+        sdk_version = 1.8
+
+        genius_version = '2.0.0'
+        glide_version = '3.7.0'
+        circle_imageview_version = '2.1.0'
+        butterknife_version = '10.2.0'
+        design_version = "28.0.0"
+        support_version = "1.1.0"
+        junit_version = "1.1.1"
+        test_version = "4.12"
+        espresso_version = "3.1.1"
+        constraintlayout_version = "1.1.3"
+        legacy_version = "1.0.0"
+        ucrop_version = '2.2.4-native'
+        easy_pm_version = "3.0.0"
+        oss_version = '2.3.0'
+    }
+
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
-        
+        classpath 'com.android.tools.build:gradle:3.5.3'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,6 +42,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
         maven { url "https://jitpack.io" }
@@ -25,9 +53,3 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext {
-    geniusVersion = '2.0.0'
-    glideVersion = '3.7.0'
-    circleimageviewVersion = '2.1.0'
-    ucropVersion = "2.2.0-native"
-}
